styling.css
/* https://flatuicolors.com/palette/cn */
body {
    font-family: Arial, Helvetica, sans-serif;
    background-color: #57606f;
    color: #ffffff;
    padding: 0;
    margin: 0;
}
header h1 {
    text-shadow: 2px 2px 5px #1e90ff;
}
.pulse {
    background-color: #833471 !important;
}
#wrapper {
    margin: 0;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
}
.side {
    background-color: #57606f;
    color: #ffffff;
    overflow: auto;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}
.side h2 {
    margin-top: 0;
}
#main {
    text-align: center;
    background-color: #dfe4ea;
    transition-property: background-color;
    transition-duration: 0.1s;
    transition-timing-function: ease-in-out;
}
#main, .side {
    width: 100vw;
    overflow: auto;
    padding: 20px;
    box-sizing: border-box;
}
#game {
    border: 10px solid transparent;
    border-image: url(./images/border.png) 33% round;
    width: 1000px;
    height: 400px;
    margin: auto;
}
#before_play {
    position: absolute;
    width: 500px;
    height: 300px;
    left: calc(50vw - 250px);
    top: calc(40vh - 150px);
    background-color: #2f3542;
    color: #ffffff;
    padding: 20px;
    box-sizing: border-box;
    text-align: center;
}
#after_play {
	display: none;
	position: absolute;
    width: 500px;
    height: 300px;
    left: calc(50vw - 250px);
    top: calc(50vh - 150px);
    background-color: #2f3542;
    color: #ffffff;
    padding: 20px;
    box-sizing: border-box;
    text-align: center;
}
#reload {
    display: inline-block;
    margin: auto;
    background-color: #1e90ff;
    padding: 10px;
}
.directions {
    text-align: left;
}

